# PgCollationReindexChecker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: cleanup_demo.sql  setup_demo.sql
pgcollcheck/: __main__.py  amcheck.py  cli.py  compare.py  db.py  decision.py  discovery.py  errors.py  exit_codes.py  models.py  progress.py  reports.py  scanner.py  server.py
pgcollcheck/sql/: __init__.py  list_databases.sql  list_index_collations.sql
tests/: test_decision.py  test_integration_postgres.py  test_partial_failures.py  test_reports.py
