[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-collation-reindex-checker"
version = "0.1.0"
description = "Find PostgreSQL indexes that should be reindexed after collation version changes."
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2,<4",
]

[project.scripts]
pgcollcheck = "pgcollcheck.cli:main"

[tool.setuptools.package-data]
pgcollcheck = ["sql/*.sql"]
