[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-collation-reindex-checker"
version = "0.1.0"
description = "Find PostgreSQL indexes that should be reindexed after collation version changes."
requires-python = ">=3.10"
authors = [
  { name = "Vlad" },
]
keywords = [
  "postgresql",
  "collation",
  "reindex",
  "icu",
  "libc",
  "amcheck",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Database Administrators",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "psycopg[binary]>=3.2,<4",
]

[project.urls]
Homepage = "https://github.com/Banana-P0wer/PgCollationReindexChecker"
Repository = "https://github.com/Banana-P0wer/PgCollationReindexChecker"
Issues = "https://github.com/Banana-P0wer/PgCollationReindexChecker/issues"

[project.scripts]
pgcollcheck = "pgcollcheck.cli:main"

[tool.setuptools.package-data]
pgcollcheck = ["sql/*.sql"]
